flux/olympus/apps/services/grist/grist.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grist
  namespace: services
  labels:
    app: grist
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grist
  template:
    metadata:
      labels:
        app: grist
    spec:
      volumes:
        - name: persist
          persistentVolumeClaim:
          claimName: grist
      containers:
        - name: grist-core
          image: gristlabs/grist:1.1.7
          volumeMounts:
            - name: persist
              mountPath: /persist
          ports:
            - containerPort: 8484
